added cancel connection
